--- a/src/app/adminregister/adminregister.component.html
+++ b/src/app/adminregister/adminregister.component.html
@@ -13,29 +13,29 @@
         <div class="card-body">
           <div class="row">
             <div>
-              <label for="" class="form-label"> Name</label>
+              <label for="" class="form-label">Admin Name</label>
               <input type="text" name="" class="form-control p-2" 
               formControlName="Name" />
             </div>
             <div>
-              <label for="" class="form-label"> Mail</label>
+              <label for="" class="form-label"> Admin Mail</label>
               <input type="text" name="" class="form-control p-2"  formControlName="Email"/>
             </div>
              <div>
-              <label for="" class="form-label">Designation</label>
+              <label for="" class="form-label">Admin Designation</label>
               <input type="text" name="" class="form-control p-2" formControlName="Designation" />
             </div>
             
             <div>
-              <label for="" class="form-label">Id</label>
+              <label for="" class="form-label">Admin Id</label>
               <input type="text" name="" class="form-control p-2" formControlName="Id" />
             </div>
             <div>
-              <label for="" class="form-label"> Mobile Number</label>
+              <label for="" class="form-label">Admin Mobile Number</label>
               <input type="text" name="" class="form-control p-2"  formControlName="Number"/>
             </div>
             <div>
-              <label for="" class="form-label"> Password</label>
+              <label for="" class="form-label">Admin Password</label>
               <input type="text" name="" class="form-control p-2"  formControlName="password"/>
             </div>
            
